--- a/NurseryPolije/app/src/main/res/values/colors.xml
+++ b/NurseryPolije/app/src/main/res/values/colors.xml
@@ -15,7 +15,6 @@
     <color name="whiteCardColor">#fff</color>
 
 
-
     <color name="address">#2F7092</color>
     <color name="followers">#0D5D98</color>
     <color name="headings">#3797CF</color>
@@ -27,4 +26,6 @@
     <color name="followingBg">#49BEFF</color>
     <color name="grey">#E5E5E5</color>
     <color name="white">#FFFFFF</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
