--- a/NurseryPolije/app/src/main/res/layout/fragment_home.xml
+++ b/NurseryPolije/app/src/main/res/layout/fragment_home.xml
@@ -117,12 +117,15 @@
 
     </RelativeLayout>
 
-
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_below="@+id/kategori">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/kategori"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="50dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -143,6 +146,11 @@
 
 
     </ScrollView>
-
-
+</RelativeLayout>
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 </RelativeLayout>
