--- a/NurseryPolije/app/src/main/res/layout/layout_update_profile.xml
+++ b/NurseryPolije/app/src/main/res/layout/layout_update_profile.xml
@@ -81,10 +81,6 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_edit_foto"
             tools:layout_editor_absoluteX="0dp">
 
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
-
         </EditText>
 
         <EditText
@@ -94,10 +90,6 @@
             android:hint="@string/regis_alamat_hint"
             app:layout_constraintTop_toBottomOf="@+id/edit_nama"
             tools:layout_editor_absoluteX="0dp">
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
 
         </EditText>
 
@@ -111,10 +103,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_alamat">
-
-<!--            <com.google.android.material.textfield.TextInputEditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
 
         </EditText>
 
@@ -151,8 +139,9 @@
         android:layout_below="@+id/simpan"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="93dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="120dp"
+        android:gravity="center"
         android:text=""
         android:textColor="@android:color/holo_red_dark"
         android:textSize="@dimen/newsMoreTextSize" />
