--- a/NurseryPolije/app/src/main/res/layout/item_list_keranjang.xml
+++ b/NurseryPolije/app/src/main/res/layout/item_list_keranjang.xml
@@ -55,7 +55,7 @@
                 tools:ignore="MissingConstraints" />
 
             <TextView
-                android:id="@+id/tvDeskripsi"
+                android:id="@+id/tvTotalHarga"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvNamaBunga"
@@ -69,15 +69,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvHarga"
+                app:layout_constraintTop_toBottomOf="@+id/tvJumlahBeli"
                 app:layout_constraintVertical_bias="0.0"
                 tools:text="@tools:sample/lorem/random" />
 
             <TextView
-                android:id="@+id/tvHarga"
+                android:id="@+id/tvJumlahBeli"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tvDeskripsi"
+                android:layout_below="@id/tvTotalHarga"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:textSize="12sp"
