--- a/NurseryPolije/app/src/main/res/layout/activity_keranjang.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_keranjang.xml
@@ -8,7 +8,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="50dp">
 
@@ -23,7 +23,9 @@
                 android:orientation="vertical"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                tools:ignore="MissingConstraints"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 tools:listitem="@layout/item_list_keranjang"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
